fastapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi-container
          image: tiangolo/uvicorn-gunicorn-fastapi:python3.11
          ports:
            - containerPort: 80
