fastapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
spec:
  selector:
    app: fastapi
  ports:
    - port: 80
      targetPort: 80
